--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+connexion = "*"
 
 [requires]
 python_version = "3.8"
