--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+pandas = "*"
+xlrd = "*"
 
 [requires]
 python_version = "3.8"
