--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 flask = "*"
@@ -12,6 +13,7 @@ flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 pandas = "*"
 xlrd = "*"
+openpyxl = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.8.7 "
