--- a/Pipfile
+++ b/Pipfile
@@ -1,11 +1,20 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
 
 [dev-packages]
+pylint = "*"
+autopep8 = "*"
+
+[packages]
+flask = "*"
+flask-sqlalchemy = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
+pandas = "*"
+xlrd = "*"
+openpyxl = "*"
 
 [requires]
 python_version = "3.8"
