--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,17 @@
-appnope==0.1.2
-astroid==2.5
-autopep8==1.5.5
-aws-shell==0.2.2
-awscli==1.19.33
-backcall==0.2.0
-boto3==1.17.33
-botocore==1.20.33
-colorama==0.4.3
-configobj==5.0.6
-decorator==4.4.2
-docutils==0.15.2
-greenlet==1.0.0
-gunicorn==20.1.0
-ipykernel==5.5.0
-ipython==7.20.0
-ipython-genutils==0.2.0
-isort==5.7.0
-jedi==0.18.0
-jmespath==0.10.0
-jupyter-client==6.1.11
-jupyter-core==4.7.1
-lazy-object-proxy==1.5.2
-mccabe==0.6.1
-msgpack==1.0.2
-parso==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==1.0.18
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pycodestyle==2.6.0
-Pygments==2.8.0
-pylint==2.7.0
-pynvim==0.4.3
-python-dateutil==2.8.1
-PyYAML==5.4.1
-pyzmq==22.0.3
-rsa==4.5
-s3transfer==0.3.6
-six==1.15.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.4
-wcwidth==0.2.5
-wrapt==1.12.1
+pylint
+autopep8
+flask
+flask-sqlalchemy
+flask-marshmallow
+marshmallow-sqlalchemy
+pandas
+xlrd
+openpyxl
+gunicorn
+Click
+itsdangerous
+Jinja2
+MarkupSafe
+Werkzeug
+
+
